edu/delivery-no-rediness-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  labels:
    app: delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: ghcr.io/acmexii/delivery-rediness:v2
          ports:
            - containerPort: 8080
