edu/canary-deploy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: order-rollout
spec:
  replicas: 10
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: jinyoung/order:canary
        ports:
        - containerPort: 80
  minReadySeconds: 13
  revisionHistoryLimit: 3
  strategy:
    canary: #Indicates that the rollout should use the Canary strategy
      maxSurge: "25%"
      maxUnavailable: 0
      steps:
      - setWeight: 10
      - pause:
          duration: 10s # 1 
      - setWeight: 20
      - pause:
          duration: 10s # 1 hour
      - setWeight: 30
      - pause:
          duration: 10s # 1 hour
      - setWeight: 40
      - pause:
          duration: 10s # 1 hour
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "order"
    labels: 
      app: "order"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "order"
    type: "ClusterIP"
